lox-tests/tests/super/super_in_top_level_function.stderr
ERROR: Cannot use `super` outside of a class
 --> 1:3
  |
1 |   super.bar(); // Error at 'super': Can't use 'super' outside of a class.
  |   ^-------^
